--- a/css/styles.css
+++ b/css/styles.css
@@ -9,12 +9,14 @@
 /* Variables */
 
 :root {
-    --main-color:#54B689;
-    --main-text-color: #FFF;
-    --border-color: #999;
-    --bio-bg-color: #1E2A3A;
-    --bio-border-color: #293544;
-    --about-bg-color: #111821;
+    --main-color:#3a65a4;
+    --main-text-color: #1E2019;
+    --border-color: #6890cb;
+    --bio-bg-color: #d9d9d9;
+    --bio-border-color: #87a7d7;
+    --about-bg-color: #c4c4c4;
+    --btn-bg-color: #4979c0;
+    --btn-text-color: #dfdfdf;
 }
 
 /* General */
@@ -129,9 +131,9 @@
 #btn-projects{
     font-weight: bold;
     font-size: 16px;
-    color: var(--main-text-color);
-    background-color: var(--main-color);
-    border: 2px solid var(--main-color);
+    color: var(--btn-text-color);
+    background-color: var(--btn-bg-color);
+    border: 2px solid var(--btn-bg-color);
     border-radius: 5px;
     text-decoration: none;
     transition: .5s;
@@ -154,6 +156,7 @@
 
 #btn-projects:hover{
     background-color: transparent;
+    color: var(--main-text-color);
 }
 
 #skills-section-title{
